Add notebook reference on distro usage

--- a/plot_categories_example.ipynb
+++ b/plot_categories_example.ipynb
@@ -13,7 +13,18 @@
    "execution_count": 1,
    "id": "ef6eeabe-107f-4c88-bd8b-176d4a52baae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   662  100   662    0     0   2168      0 --:--:-- --:--:-- --:--:--  2170\n",
+      "100  683k  100  683k    0     0   610k      0  0:00:01  0:00:01 --:--:--  876k\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install -qq --no-cache-dir seaborn\n",
     "!curl -LO https://github.com/myagues/steam-hss-data/releases/download/2021.12/steam_hw_survey.parquet"
@@ -2351,6 +2362,14 @@
    ],
    "source": [
     "df_linux.pivot(index=[\"index\"], columns=\"date\", values=\"perc\").replace(0, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "406ebc6d-5f2c-4316-94f1-1e7b4d51a48b",
+   "metadata": {},
+   "source": [
+    "The category `Other` shadows many distribution versions, so be careful making assumptions with these values. Another source of distribution usage is [All Roads Lead to Arch: The Evolution of Linux Distros Used for Gaming Over Time](https://boilingsteam.com/all-roads-lead-to-arch-the-evolution-of-linux-distros-used-for-gaming-over-time), although the series begins at the end of 2018."
    ]
   }
  ],
